@@ -1,6 +1,9 @@
 - orphans handling
   o do not offer to remove current kernel (even if it's not a official
     kernel
+  o offer to remove old kernels (excluding the running one)
+    (also do not do anything regarding kernels if we failed to detect
+    the running one (ie: chroot))
 
 Version 6.27.1 - 18 August 2009
 
